--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
 
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
+    <script src="assets/js/game.js"></script>
 </body>
 </html>
